# student_system

./: .gitignore  BACKEND_REPORTS_INTEGRATION.md  BACKEND_REPORTS_QUICKSTART.md  BACKEND_REPORTS_SUMMARY.md  DEPLOYMENT_HARDENING.md  README.md  RENDER_ACTION_PLAN.md  RENDER_CODE_PATCHES.md  RENDER_DEPLOYMENT_AUDIT.md  RENDER_DOCS_INDEX.md  RENDER_QUICK_START.md  RENDER_TIMELINE.md  SECURITY_10_10.md  SECURITY_CHECKLIST.md  SUPABASE_SETUP.md  SYSTEM_IMPROVEMENTS.md  pubspec.yaml  pyrightconfig.json  render.yaml  vercel.json
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260419_1640_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  (+3 more)
backend/app/core/: config.py  csrf.py  device_fingerprint.py  encryption.py  logging.py  password_policy.py  rate_limit.py  refresh_tokens.py  security.py  two_factor_auth.py
backend/app/db/: base.py  session.py
backend/app/jobs/: maintenance.py  outbox_worker.py  run_web.py
backend/app/middleware/: input_validation.py  observability.py  request_context.py  security_headers.py
backend/app/models/: __init__.py  audit_log.py  auth_security.py  user.py
backend/app/schemas/: auth.py  reports.py
backend/app/services/: alerts.py  audit.py  auth_lifecycle.py  bootstrap.py  email_provider_resend.py  governance.py  outbox.py  report_generator.py  sms_provider_vonage.py
backend/tests/: test_auth_integration.py  test_auth_primitives.py  test_delivery_and_policy.py  test_security.py
(+70 files in other folders)
