[project]
name = "student-system-backend"
version = "0.1.0"
description = "Security-focused FastAPI backend for the student management system."
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.21.0",
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "pwdlib[argon2]>=0.3.0",
  "pydantic-settings>=2.10.0",
  "pyjwt[crypto]>=2.10.1",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.1",
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

