[project]
name = "student-system-backend"
version = "0.1.0"
description = "Security-focused FastAPI backend for the student management system."
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.21.0",
  "alembic>=1.16.0",
  "asyncpg>=0.30.0",
  "cryptography>=41.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "openpyxl>=3.0.0",
  "pyotp>=2.9.0",
  "pwdlib[argon2]>=0.3.0",
  "prometheus-client>=0.23.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.10.0",
  "pyjwt[crypto]>=2.10.1",
  "redis>=6.4.0",
  "reportlab>=3.6.0",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
